# ai-cli

./: pyproject.toml
src/ai/: app.py
src/ai/llm/: open_ai.py  utils.py
